[gd_scene load_steps=2 format=3 uid="uid://ck187dm1vu8ry"]

[ext_resource type="Script" path="res://Tools/stair_case_tool.gd" id="1_oggjj"]

[node name="StairCaseTool" type="Node2D"]
script = ExtResource("1_oggjj")

[node name="EnterFromForward" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterFromForward"]
position = Vector2(8, -8)

[node name="EnterFromBackward" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterFromBackward"]
position = Vector2(88, -72)

[node name="Path2D" type="Path2D" parent="."]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="Path2D/PathFollow2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/StaticBody2D"]

[connection signal="body_entered" from="EnterFromForward" to="." method="_on_enter_from_forward_body_entered"]
[connection signal="body_exited" from="EnterFromForward" to="." method="_on_enter_from_forward_body_exited"]
[connection signal="body_entered" from="EnterFromBackward" to="." method="_on_enter_from_backward_body_entered"]
[connection signal="body_exited" from="EnterFromBackward" to="." method="_on_enter_from_backward_body_exited"]
